internal/xds/translator/testdata/out/xds-ir/http3-route.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-http3/http
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-http3/http/*
    routes:
    - match:
        path: /auto-route
      name: auto-route
      route:
        cluster: httproute/default/http3-auto/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.alternate_protocols_cache:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        path: /auto-route-2
      name: auto-route-2
      route:
        cluster: httproute/default/http3-auto-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.alternate_protocols_cache:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        path: /always-route
      name: always-route
      route:
        cluster: httproute/default/http3-always/rule/0
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        path: /no-tls-route
      name: no-tls-route
      route:
        cluster: httproute/default/http3-no-tls/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.alternate_protocols_cache:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-http3/https
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-http3/https/*
    routes:
    - match:
        path: /https-auto-route
      name: https-auto-route
      route:
        cluster: httproute/default/https-http3-auto/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.alternate_protocols_cache:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        path: /https-plain-route
      name: https-plain-route
      route:
        cluster: httproute/default/https-plain/rule/0
        upgradeConfigs:
        - upgradeType: websocket
